some more private methods to use their inside GUI for loading a configuration file